Avoid button overlap

--- a/lhc_web/design/defaulttheme/css/app.css
+++ b/lhc_web/design/defaulttheme/css/app.css
@@ -1158,6 +1158,7 @@ input[type="file"]{
 	bottom:54px;
 	border:1px solid #ddd;
 	font-size:12px;
+    z-index:999;
 }
 
 .current-hash-content{
